--- a/src/main/resources/templates/pagrindinis.html
+++ b/src/main/resources/templates/pagrindinis.html
@@ -82,161 +82,8 @@
 		  box-shadow: rgba(60, 60, 60);
 
 		}
-		
-		#gta{
-		
-			position: relative;
-			top: 150px;
-			left: 100px;
-		
-		}
-		
-		#gta:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
 
-		}
-	
-		#fifa{
-		
-			position: relative;
-			top: 150px;
-			left: 200px;
-		
-		}
-		
-		#fifa:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-		
-		#nba{
-		
-			position: relative;
-			top: 150px;
-			left: 300px;
-		
-		}
-		
-		#nba:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-			
-		#wot{
-		
-			position: relative;
-			top: 150px;
-			left: 375px;
-		
-		}
-		
-		#wot:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-		
-		
-		#valorant{
-		
-			position: relative;
-			top: 150px;
-			left: 450px;
-		
-		}
-		
-		#valorant:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-		
-		#lol{
-		
-			position: relative;
-			top: 525px;
-			right: 1441px;
-		
-		}
-		
-		#lol:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-		
-		#minecraft{
-		
-			position: relative;
-			top: 281px;
-			left: 335px;
-		
-		}
-
-		#minecraft:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-		
-		#sot{
-		
-			position: relative;
-			top: 281px;
-			left: 445px;
-		
-		}
-
-		#sot:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-
-		#rss6{
-		
-			position: relative;
-			top: 281px;
-			left: 545px;
-		
-		}
-
-		#rss6:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-
-		#pubg{
-		
-			position: relative;
-			top: 281px;
-			left: 625px;
-		
-		}
-
-		#pubg:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
-		
-		#dbd{
-		
-			position: relative;
-			top: 281px;
-			left: 690px;
-		
-		}
-		
-		#dbd:hover {
-		  transform: translateY(-15px);
-		  box-shadow: rgba(60, 60, 60);
-
-		}
+	}
 		
 	</style>
 	
@@ -253,21 +100,12 @@
 	    
 	</div>
 
-		
-	 	<a th:href=@{csgo}><img id="csgo" src="logo/csgo.png"></a>
-	 	<a th:href=@{gta}><img id="gta" src="logo/gta.png"></a>
-	 	<a th:href=@{fifa}><img id="fifa" src="logo/fifa.png"></a>
-	 	<a th:href=@{nba}><img id="nba" src="logo/nba.png"></a>
-	 	<a th:href=@{wot}><img id="wot" src="logo/wot.png"></a>
-	 	<a th:href=@{valorant}><img id="valorant" src="logo/valorant.png"></a>
-	 	<a th:href=@{lol}><img id="lol" src="logo/lol.png"></a>
-	 	<a th:href=@{minecraft}><img id="minecraft" src="logo/minecraft.png"></a>
-	 	<a th:href=@{sot}><img id="sot" src="logo/sot.png"></a>
-	 	<a th:href=@{rss6}><img id="rss6" src="logo/rss6.png"></a>
-	 	<a th:href=@{pubg}><img id="pubg" src="logo/pubg.png"></a>
-	 	<a th:href=@{dbd}><img id="dbd" src="logo/dbd.png"></a>
+	<tr th:each="zaidimai : ${zaidimai}">
+	
+	 	<td><a th:href=@{zaidimas(i=${zaidimai.getId()})}><img id="csgo" th:src="@{${'logo/' + zaidimai.getLogo_failas()}}"></a></td>
 
+	</tr>
+	
 </body>
-
 
 </html>
