siek tiek pasitvarkymo su komentavimu

--- a/src/main/resources/templates/zaidimas.html
+++ b/src/main/resources/templates/zaidimas.html
@@ -55,6 +55,77 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
         	text-underline-offset: 5px;
         
         }
+        
+        .user{
+        
+        	color: FF0000;
+        
+        }
+ 		#registruotis{
+        
+        	position: relative;
+        	left: 1700px;
+        	top: 24px;
+        	font-family: Fantasy;
+        
+        }
+        
+        #registruotis a{
+        
+        	text-decoration: none;
+        	color: white;
+        
+        }
+        
+        #registruotis a:hover{
+        
+        	text-decoration: underline;
+        	text-decoration-thickness: 3px;
+        	text-underline-offset: 5px;
+        
+        }
+        
+        #prisijungti{
+        
+        	position: relative;
+        	left: 1650px;
+        	top: 24px;
+        	font-family: Fantasy;
+        
+        }
+        
+        #prisijungti a{
+        
+        	text-decoration: none;
+        	color: white;
+        
+        }
+        
+        #prisijungti a:hover{
+        
+        	text-decoration: underline;
+        	text-decoration-thickness: 3px;
+        	text-underline-offset: 5px;
+        
+        }
+        
+        #atsijungti{
+        	
+        	position: relative;
+        	left: 1650px;
+        	top: 24px;
+        
+        }
+        
+        #vardas{
+        
+        	position: relative;
+        	color: white;
+        	left: 1200px;
+        	top: 24px;
+        	
+        
+        }
 	
 	</style>
 		
@@ -69,23 +140,48 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 	<div id="top-bar">
 	    
-	    <span id="grizti"><a th:href="@{/pagrindinis}">Grįžti į pagrindinį puslapį</a></span>
+		<div sec:authorize="!isAuthenticated()">
+			<span id="prisijungti"><a th:href="@{/login}">Prisijungti</a></span>
+			
+		    <span id="registruotis"><a th:href="@{/register}">Registruotis</a></span>
+	 	</div>
+	 	
+		<div sec:authorize="isAuthenticated()">
+			<form th:action="@{/logout}" method="post">
+					
+		            <input id="atsijungti" type="submit" value="Atsijungti" />
+		            
+		            <span id="vardas">
+		                Sveiki prisijungę, <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+		            </span>
+		            
+		    </form>
+	    </div>
 	    
 	</div>
 	
-	<div id="komentaro_pridejimas">
-		<form method="post" action="">
-				<label for="komentaras"><br> Parašykite komentarą: <br></label>
-				<input type="text" name="komentaras" id="komentaras" value="">
-				<input type="hidden" id="id" name="id" value="0">
-				<input type="submit" value="Pridėti">
-				<input type="hidden" id="prideti" name="prideti" value="prideti">
-		</form>
+	<div sec:authorize="isAuthenticated()">
+		<div id="komentaro_pridejimas">
+			<form method="post" action="">
+					<label for="komentaras"><br> Parašykite komentarą: <br></label>
+					<input type="text" name="komentaras" id="komentaras" value="">
+					<input type="hidden" id="id" name="id" value="0">
+					<input type="submit" value="Pridėti">
+					<input type="hidden" id="prideti" name="prideti" value="prideti">
+			</form>
+		</div>
+	</div>
+	
+	<div sec:authorize="!isAuthenticated()">
+		<span><h3>Jeigu norite komentuoti, turite prisijungti</h3></span>
+		<hr>
 	</div>
 	
 	<table>
 	
 			<tr th:each="zaidimas : ${zaidimas.getKomentaru_lentele()}" >
+				<td class="user"><span th:text="${zaidimas.getUser().getFirstName()} "></span></td>
+				<td class="user"><span th:text="${zaidimas.getUser().getLastName()}"></span></td>
 				<td><span th:text="${zaidimas.getKomentaras()} "></span></td>
 				<td><span th:text="${zaidimas.getData()} "></span></td>
 			</tr>	
