--- a/src/main/resources/templates/pagrindinis.html
+++ b/src/main/resources/templates/pagrindinis.html
@@ -1,4 +1,5 @@
-<html>
+<html
+ xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
 
 <head>
@@ -69,15 +70,35 @@
         	text-underline-offset: 5px;
         
         }
+        
+        #atsijungti{
+        	
+        	position: relative;
+        	left: 1650px;
+        	top: 24px;
+        
+        }
+        
+        #vardas{
+        
+        	position: relative;
+        	color: white;
+        	left: 1300px;
+        	top: 24px;
+        	
+        
+        }
 	
-		#csgo{
-		
-			position: relative;
-			top: 150px;
+		.logo{
+			
+			padding-top: 112px;
+			padding-left: 60px; 
+    		
 		
 		}
+
+		.logo:hover {
 		
-		#csgo:hover {
 		  transform: translateY(-15px);
 		  box-shadow: rgba(60, 60, 60);
 
@@ -93,16 +114,32 @@
 <body>
 	
 	<div id="top-bar">
-	
-		<span id="prisijungti"><a th:href="@{/login}">Prisijungti</a></span>
 		
-	    <span id="registruotis"><a th:href="@{/register}">Registruotis</a></span>
+		<div sec:authorize="!isAuthenticated()">
+			<span id="prisijungti"><a th:href="@{/login}">Prisijungti</a></span>
+			
+		    <span id="registruotis"><a th:href="@{/register}">Registruotis</a></span>
+	 	</div>
+	 	
+		<div sec:authorize="isAuthenticated()">
+			<form th:action="@{/logout}" method="post">
+					
+		            <input id="atsijungti" type="submit" value="Atsijungti" />
+		            
+		            <span id="vardas">
+		                Sveiki prisijungę, <b>[[${#request.userPrincipal.principal.fullName}]]</b>
+		            </span>
+		            
+		    </form>
+	    </div>
 	    
 	</div>
+	
+
 
 	<tr th:each="zaidimai : ${zaidimai}">
 	
-	 	<td><a th:href=@{zaidimas(i=${zaidimai.getId()})}><img id="csgo" th:src="@{${'logo/' + zaidimai.getLogo_failas()}}"></a></td>
+	 	<td><a th:href=@{zaidimas(i=${zaidimai.getId()})}><img class="logo" th:src="@{${'logo/' + zaidimai.getLogo_failas()}}"></a></td>
 
 	</tr>
 	
