--- a/src/main/resources/templates/informacija.html
+++ b/src/main/resources/templates/informacija.html
@@ -4,11 +4,11 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 
 <head>
 
-	<title>Zaidimas</title>
+	<title>Informacija</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-	
+	    
 	<style>
 	
 		#top-bar{
@@ -25,38 +25,8 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
            margin: 0;
            padding: 0;
         }
-		
-		#grizti{
         
-        	position: relative;
-        	font-family: Fantasy;
-        	top: 25px;
-        	left: 15px;
-        
-        }
-        
-        #grizti a{
-        
-        	text-decoration: none;
-        	color: white;
-        
-        }
-        
-        #grizti a:hover{
-        
-        	text-decoration: underline;
-        	text-decoration-thickness: 3px;
-        	text-underline-offset: 5px;
-        
-        }
-        
-        .user{
-        
-        	color: FF0000;
-        
-        }
-        
- 		#registruotis{
+         #registruotis{
         
         	position: relative;
         	left: 1700px;
@@ -120,32 +90,29 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
         	top: 24px;
         	
         }
-        
-        .info{
-        
-        	position: relative;
-        	float: right;
+	
+		.info{
+		
+			position: relative;
+			left: 4px;
+			font-weight: 900;
+		
+		}
+		
+		.pav{
+		
+			font-weight: 900;
+		
+		}
+		
+		.informacija{
+		
         	font-family: Fantasy;
-        	top: 250px;
-        	right: 195px;
-        
-        }
-        
-        .logo{
-        
-        	float: right;
-        	position: relative;
-        
-        }
-
+        	color: pink;
+		
+		}
 	
 	</style>
-	
-		
-	<script>
-		
-		
-	</script>
 	    
 </head>
 
@@ -172,44 +139,24 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 	    </div>
 	    
 	</div>
-	
-	<div sec:authorize="isAuthenticated()">
-		<div id="komentaro_pridejimas">
-		
-			<form method="post" action="">
-					<label for="komentaras"><br> Parašykite komentarą: <br></label>
-					<input type="text" name="komentaras" id="komentaras" value="">
-					<input type="hidden" id="id" name="id" value="0">
-					<input type="submit" value="Pridėti">
-					<input type="hidden" id="prideti" name="prideti" value="prideti">
-			</form>
-		</div>
-	</div>
-	
-	<div sec:authorize="!isAuthenticated()">
-		<span><h3>Jeigu norite komentuoti, turite prisijungti</h3></span>
-		<hr>
-	</div>
-	
-		<tr th:each="zaidimas : ${zaidimas}">
-	
-		<td><a class="info" th:href="@{informacija(i=${zaidimas.getId()})}">Informacija apie žaidimą</a></td>
-		<td><img class="logo" th:src="@{${'logo/' + zaidimas.getLogo_failas()}}"></td>
-		
-	</tr>
+
+	<span class="info">Šiek tiek informacijos apie</span>
 	
 	<table>
 	
-			<tr th:each="zaidimas : ${zaidimas.getKomentaru_lentele()}" >
-				<td class="user"><span th:text="${zaidimas.getUser().getFirstName()} "></span></td>
-				<td class="user"><span th:text="${zaidimas.getUser().getLastName()}"></span></td>
-				<td><span th:text="${zaidimas.getKomentaras()} "></span></td>
-				<td><span th:text="${zaidimas.getData()} "></span></td>
+			<tr th:each="zaidimas : ${zaidimas}" >
+				<td class="pav"><a th:href><span th:text="${zaidimas.getZaidimo_pavadinimas()} "></span></a></td>
 			</tr>	
 			
 	</table>
 	
-
+	<table>
+	
+			<tr th:each="zaidimas : ${zaidimas}" >
+				<td class="informacija"><span th:text="${zaidimas.getInformacija()} "></span></td>
+			</tr>	
+			
+	</table>
 	
 </body>
 
